--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,5 @@
 = WordPress Publish Plugin for Gradle
+:important-caption: :heavy_exclamation_mark:
 
 image:https://github.com/neo4j-contrib/wordpress-publish-gradle-plugin/workflows/Build/badge.svg[Build status,link=https://github.com/neo4j-contrib/wordpress-publish-gradle-plugin/actions?query=workflow%3ABuild]
 image:https://img.shields.io/maven-metadata/v?metadataUrl=https%3A%2F%2Fplugins.gradle.org%2Fm2%2Fcom.neo4j.gradle.wordpress.WordPressPlugin%2Fcom.neo4j.gradle.wordpress.WordPressPlugin.gradle.plugin%2Fmaven-metadata.xml[Gradle Plugin,link=https://plugins.gradle.org/plugin/com.neo4j.gradle.wordpress.WordPressPlugin]
@@ -75,3 +76,26 @@ tags:
 categories:
   - training
 ----
+
+== Publish a new version
+
+[IMPORTANT]
+====
+You must configure `gradle.publish.key` and `gradle.publish.secret` to your `~/.gradle/gradle.properties` before publishing:
+
+.~/.gradle/gradle.properties
+[source,properties]
+----
+gradle.publish.key=
+gradle.publish.secret=
+----
+====
+
+1. Update the version in the `build.gradle.kts` file
+2. Tag and push to master:
++
+ $ git tag vx.y.z && git push origin master --tags
+
+3. Open a terminal and type:
++
+ $ ./gradlew publishPlugins
